# FinanceWatcher

./: .dockerignore  .gitignore  Dockerfile  README.md  data_pipeline.py  requirements.txt
.github/workflows/: ci.yml
backend/: app.py  config.py  config.yaml  corpus_stats.py  data_pipeline.py  pyproject.toml  requirements.txt
backend/agents/: agent.py  graph.py
backend/api/: app.py
backend/data/: __init__.py  chroma.py  sqlite.py
backend/data/chroma/: __init__.py  chroma_client.py  index_service.py  query_service.py
backend/data/gatherers/: __init__.py  base.py  marketaux.py
backend/data/gatherers/scraper/: __init__.py  robot_guard.py  scraper.py  stealth_scraper.py  summarizer.py
backend/data_pipeline/: __init__.py  __main__.py  pipeline.py
backend/data_pipeline/gatherers/: base.py  marketaux.py
backend/data_pipeline/gatherers/scraper/: stealth_scraper.py  summarizer.py
backend/eval/: README.md  __init__.py  export_corpus.py  harness.py  make_e6_template.py  make_scaffold.py  metrics.py  report.py  run_end_to_end.py  run_latency.py  run_planner.py  run_retrieval.py
backend/eval/datasets/: planner_gold.json  retrieval_gold.scaffold.json
backend/llm/: __init__.py  ollama_api.py
backend/mcp_server/: __init__.py  agent.py  server.py
backend/mcp_server/agents/: graph.py  prompts.py
backend/models/: __init__.py  llama3.py
backend/rag/: __init__.py  background_indexer.py  chroma.py  device.py  embedder.py  extractor.py  gatherer.py  reranker.py  sqlite.py
backend/tests/: conftest.py  test_config.py  test_config_wiring.py  test_contracts.py  test_corpus_stats.py  test_graph_helpers.py  test_graph_logic.py  test_marketaux_logic.py  test_querier_logic.py  test_query_service.py  test_utils_logic.py
backend/utils/: __init__.py  agent_utils.py  constants.py  data_structures.py  dates.py  exceptions.py  io_utils.py  logger.py  mcp_utils.py  nlp_setup.py  robot_guard.py  string_constants.py
data/: chroma.py  embedder.py  gatherer.py  market_news_db.py  reranker.py  sqlite.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js
llm/: ollama_api.py
rag/: embedder.py
utils/: __init__.py  data_structures.py  exceptions.py  io_utils.py  logger.py  string_constants.py
