[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb==1.0.13",
    "compressed-tensors>=0.10.2",
    "beautifulsoup4>=4.12.0",
    "fake-useragent>=2.2.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "huggingface-hub[hf-xet]>=0.33.3",
    "keybert>=0.9.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters==0.1.10",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.3.0",
    "lxml[html-clean]>=6.0.0",
    "mcp[cli]==1.9.4",
    "newspaper3k>=0.2.8",
    "numpy==2.2.6",
    "ollama~=0.5.1",
    "pandas~=2.3.0",
    "playwright>=1.53.0",
    "pydantic~=2.11.7",
    "python-dotenv~=1.1.0",
    "rapidfuzz>=3.13.0",
    "requests~=2.32.4",
    "sentence-transformers~=4.1.0",
    "torch",
    "torchvision",
    "tqdm~=4.67.1",
    "transformers~=4.52.4",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "UP", # pyupgrade
    "B",  # bugbear
]

[tool.ruff.lint.per-file-ignores]
# This module is essentially LLM prompt text; the long lines are example
# sentences inside triple-quoted strings where a wrap would alter the prompt.
"models/llama3.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"